fix: UI changes preview on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -151,6 +151,7 @@
   font-size: 22px;
   line-height: 141%;
   letter-spacing: 0.05em;
+  text-align: left;
   color: #303030;
 }
 
